--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
-    "16": "images/icon-16.png",
+    "16": "images/icon-128.png",
     "128": "images/icon-128.png"
   },
   "default_locale": "en",
@@ -16,7 +16,7 @@
     ]
   },
   "permissions": [],
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
