--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_appName__",
   "version": "0.0.1",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-128.png",
@@ -15,19 +15,20 @@
       "scripts/background.js"
     ]
   },
-  "permissions": [],
+  "permissions": ["scripting", "storage", "tabs", "activeTab", "declarativeContent"],
   "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
     "default_title": "SIGN SPEAK",
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
   "web_accessible_resources": [
     "images/icon-128.png",
     "images/icon-19.png",
-    "images/icon-38.png"
+    "images/icon-38.png",
+    "images/icone-title.png"
   ]
   
 }
