--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_appName__",
   "version": "0.0.1",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-128.png",
@@ -15,7 +15,7 @@
       "scripts/background.js"
     ]
   },
-  "permissions": ["scripting", "storage", "tabs", "activeTab", "declarativeContent"],
+  "permissions": ["scripting", "activeTab"],
   "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
