in progress css for popup

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,7 +12,7 @@
     "service_worker": "scripts/background.js"
   },
   "options_page": "option.html",
-  "permissions": ["scripting", "activeTab"],
+  "permissions": ["scripting", "activeTab", "tabs", "windows"],
   "host_permissions": [],
   "action": {
     "default_icon": {
@@ -30,9 +30,12 @@
         "images/icon-38.png",
         "images/icone-title.png",
         "fonts/fontawesome/css/all.min.css",
-        "fonts/fontawesome/webfonts/*"
+        "fonts/fontawesome/webfonts/*",
+        "popup.html"
       ],
       "matches": ["<all_urls>"]
     }
   ]
 }
+
+
