--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,8 +12,17 @@
     "service_worker": "scripts/background.js"
   },
   "options_page": "option.html",
-  "permissions": ["scripting", "activeTab"],
-  "host_permissions": [],
+  "permissions": [
+        "scripting", 
+        "tabs", 
+        "activeTab", 
+        "tabCapture", 
+        "storage",
+        "mediaDevices"],
+  "host_permissions": [
+    "https://meet.google.com/*",
+    "https://teams.microsoft.com/*"
+  ],
   "action": {
     "default_icon": {
       "19": "images/icon-19.png",
