--- a/app/manifest.json
+++ b/app/manifest.json
@@ -11,7 +11,7 @@
   "background": {
     "service_worker": "scripts/background.js"
   },
-  "options_page": "option/option.html",
+  "parameters_page": "parameters/menu.html",
   "permissions": ["scripting", "activeTab", "tabs", "windows"],
   "host_permissions": [],
   "action": {
@@ -32,7 +32,8 @@
         "fonts/fontawesome/css/all.min.css",
         "fonts/fontawesome/webfonts/*",
         "popup.html",
-        "option.html"
+        "option.html",
+        "menu.html"
       ],
       "matches": ["<all_urls>"]
     }
