add test, fix bug screen

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -46,7 +46,8 @@
         "parameters/menu/menu.html",
         "parameters/general/general.html"
       ],
-      "matches": ["<all_urls>"]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
   ]
 }
